@@ -1,6 +1,16 @@
 2017-02-14  Jonathan Wakely  <jwakely@redhat.com>
 
 	Backport from mainline
+	2017-01-18  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/69301
+	* include/std/atomic (atomic<T>::load, atomic<T>::exchange): Use
+	aligned buffer instead of default-initialized variable.
+	* testsuite/29_atomics/atomic/69301.cc: New test.
+	* include/ext/pointer.h (_Pointer_adapter::operator++(int))
+	(_Pointer_adapter::operator--(int)): Likewise.
+
+	Backport from mainline
 	2017-01-16  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/78702
